# bpe-tokenizer

./: .gitignore  README.md  conftest.py  pyproject.toml
benchmarks/: benchmark_train.py
bpe/: __init__.py  base_tokenizer.py  naive_tokenizer.py  optimized_tokenizer.py  tokenizer_factory.py
docs/: complexity-analysis.md
tests/: test_optimized_heap_and_consistency.py  test_optimized_vs_naive_regression.py  test_pretokenization_behavior.py  test_tokenizer.py
