[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpe-tokenizer-edu"
version = "0.1.0"
description = "Educational BPE tokenizer with simple optimization experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "regex",
]
