[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpe-tokenizer-edu"
version = "0.1.0"
description = "Educational BPE tokenizer with simple optimization experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "regex",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
include = ["bpe*"]
exclude = ["data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
